# CrossEnrich

./: .crossenrich_state.json  .gitignore  CrossEnrich_v0.ipynb  README.md  pyproject.toml
.crossenrich_cache/: outputs.pkl
Benchmarks/: best_model_predictions.csv  semantic_similarity_benchmark_organized_v2_filled.csv  semantic_similarity_benchmarking.ipynb  weight_search.py  weight_search_results.csv
docs/: oxphos_cli_case_study.md
notebooks/: CrossEnrich_v0.ipynb  pipline.ipynb  test.ipynb
src/crossenrich/: __init__.py  baseline.py  cli.py  network.py  pipeline.py  reporting.py  semantic.py  standardization.py  validation.py  visuals.py
src/crossenrich.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_crossenrich.py
