[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crossenrich"
version = "0.1.0"
description = "Cross-database enrichment standardization and benchmarking utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "sentence-transformers>=3.0",
    "matplotlib>=3.8",
    "networkx>=3.2",
    "seaborn>=0.13",
]

[project.scripts]
crossenrich = "crossenrich.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
